[tool.poetry]
name = "oatnote-ai"
version = "0.1.0"
description = ""
authors = ["r4pidstart <r4pidstart@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
langchain-openai = "^0.1.14"
langchain = "^0.2.6"
langchain-mongodb = "^0.1.6"
pymongo = "^4.8.0"
sentry-sdk = "^2.8.0"
certifi = "^2024.7.4"
langsmith = "^0.1.99"
beautifulsoup4 = "^4.12.3"
aiohttp = "^3.10.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
