[tool.poetry]
name = "oatnote-ai"
version = "0.1.0"
description = ""
authors = ["r4pidstart <r4pidstart@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pymongo = "^4.8.0"
sentry-sdk = "^2.8.0"
certifi = "^2024.7.4"
langsmith = "^0.1.99"
duckduckgo-search = "^6.3.0"
langchain = "^0.3.3"
langchain-mongodb = "^0.2.0"
langchain-openai = "^0.2.2"
langchain-community = "^0.3.2"
aiohttp = "^3.10.10"
trafilatura = "^1.12.2"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
